# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: aoc_bench.rs
src/: lib.rs
src/solutions/: common.rs  mod.rs
src/solutions/day01/: mod.rs
src/solutions/day02/: mod.rs
src/solutions/day03/: mod.rs
src/solutions/day04/: mod.rs
src/solutions/day05/: mod.rs
src/solutions/day06/: mod.rs
src/solutions/day07/: mod.rs
src/template/: macros.rs  mod.rs
src/template/commands/: scaffold.rs
