[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["noaione <hi@n4o.xyz>", "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
itertools = "0.12.0"
pico-args = "0.5.0"
regex = "1.10.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "aoc_bench"
harness = false
